<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- connection -->

    <PreferenceScreen android:key="connection_group" android:title="@string/pref_connection_group">

        <!-- connection type. the next two screens are only visible when relevant connection type is selected -->

        <ListPreference android:key="connection_type" android:title="@string/pref_connection_type" android:defaultValue="plain" android:entries="@array/pref_connection_type_names" android:entryValues="@array/settings_connection_type_values"  android:summary="%s"/>

        <EditTextPreferenceFix android:key="ws_path" android:title="@string/pref_ws_path" android:summary="%s" android:singleLine="true" android:defaultValue="weechat" />
        <ClearCertPreference android:key="ssl_group" android:title="@string/pref_clear_certs" />

        <PreferenceScreen android:key="ssh_group" android:title="@string/pref_ssh_group">
            <EditTextPreferenceFix android:key="ssh_host" android:title="@string/pref_ssh_host" android:summary="%s" android:singleLine="true" />
            <EditTextPreferenceFix android:key="ssh_port" android:title="@string/pref_ssh_port" android:summary="%s" android:numeric="integer" android:defaultValue="22" />
            <EditTextPreferenceFix android:key="ssh_user" android:title="@string/pref_ssh_user" android:summary="%s" android:singleLine="true" />
            <EditTextPreferenceFix android:key="ssh_pass" android:title="@string/pref_ssh_pass" android:summary="%s" android:password="true" android:singleLine="true"/>
            <FilePreference android:key="ssh_key" android:title="@string/pref_ssh_key" android:summary="@string/pref_ssh_key_summary" />
            <FilePreference android:key="ssh_known_hosts" android:title="@string/pref_ssh_known_hosts" android:summary="@string/pref_ssh_known_hosts_summary" />
        </PreferenceScreen>

        <!-- relay settings and the rest -->

        <PreferenceCategory android:key="connection_relay_group" android:title="@string/pref_relay_group">
            <EditTextPreferenceFix android:key="host" android:title="@string/pref_relay_host" android:summary="%s" android:singleLine="true" />
            <EditTextPreferenceFix android:key="port" android:title="@string/pref_relay_port" android:summary="%s" android:numeric="integer" android:defaultValue="9001" />
            <EditTextPreferenceFix android:key="password" android:title="@string/pref_relay_password" android:summary="%s" android:inputType="textPassword" android:password="true" android:singleLine="true" />
        </PreferenceCategory>

        <PreferenceCategory android:key="connection_misc_group" android:title="@string/pref_misc_group">
            <EditTextPreferenceFix android:key="line_increment" android:title="@string/pref_line_increment" android:summary="@string/pref_line_increment_summary" android:numeric="integer" android:defaultValue="100" />
            <CheckBoxPreference android:key="reconnect" android:title="@string/pref_reconnect" />
            <CheckBoxPreference android:key="boot_connect" android:title="@string/pref_boot_connect" />
            <CheckBoxPreference android:key="optimize_traffic" android:summary="@string/pref_optimize_traffic_summary" android:title="@string/pref_optimize_traffic" android:defaultValue="false"/>
            <CheckBoxPreference android:key="hotlist_sync" android:summary="@string/pref_hotlist_sync_summary" android:title="@string/pref_hotlist_sync" android:defaultValue="false"/>

            <PreferenceScreen android:key="ping_group" android:title="@string/pref_ping_group">
                <CheckBoxPreference android:key="ping_enabled" android:title="@string/pref_ping_enabled" android:summary="@string/pref_ping_enabled_summary" android:defaultValue="true" />
                <EditTextPreferenceFix android:key="ping_idle" android:title="@string/pref_ping_idle" android:summary="@string/pref_ping_idle_summary" android:numeric="integer" android:defaultValue="300" android:dependency="ping_enabled" />
                <EditTextPreferenceFix android:key="ping_timeout" android:title="@string/pref_ping_timeout" android:summary="@string/pref_ping_timeout_summary" android:numeric="integer" android:defaultValue="30" android:dependency="ping_enabled" />
            </PreferenceScreen>
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- buffer list -->

    <PreferenceScreen android:key="bufferlist_group" android:title="@string/pref_bufferlist_group">
		<CheckBoxPreference android:key="sort_buffers" android:summary="@string/pref_sort_buffers_summary" android:title="@string/pref_sort_buffers" android:defaultValue="false" />
		<CheckBoxPreference android:key="filter_nonhuman_buffers" android:title="@string/pref_hide_server_buffers" android:summary="@string/pref_hide_server_buffers_summary" android:defaultValue="false" />
        <CheckBoxPreference android:key="hide_hidden_buffers" android:title="@string/pref_hide_hidden_buffers" android:summary="@string/pref_hide_hidden_buffers_summary" android:defaultValue="false" />
		<CheckBoxPreference android:key="show_buffer_filter" android:title="@string/pref_show_buffer_filter" android:summary="@string/pref_show_buffer_filter_summary"  android:defaultValue="false" />
    </PreferenceScreen>

    <!-- look and feel -->

    <PreferenceScreen android:key="lookfeel_group" android:title="@string/pref_lookfeel_group">
        <EditTextPreferenceFix android:key="text_size" android:title="@string/pref_text_size" android:summary="%s" android:defaultValue="12" android:numeric="integer" />
        <CheckBoxPreference android:key="auto_hide_actionbar" android:title="@string/pref_auto_hide_actionbar" android:summary="@string/pref_auto_hide_actionbar_summary" android:defaultValue="true"/>
        <CheckBoxPreference android:key="chatview_filters" android:title="@string/pref_chatview_filters" android:summary="@string/pref_chatview_filters_summary" android:defaultValue="true" />
        <ListPreference android:key="prefix_align" android:title="@string/pref_prefix_align" android:summary="%s" android:defaultValue="right" android:entries="@array/pref_prefix_align_names" android:entryValues="@array/settings_prefix_alignment_values" />
        <EditTextPreferenceFix android:key="prefix_max_width" android:title="@string/pref_max_width" android:summary="@string/pref_max_width_summary" android:numeric="integer" android:defaultValue="7" />
        <CheckBoxPreference android:key="enclose_nick" android:title="@string/pref_enclose_nick" android:summary="@string/pref_enclose_nick_summary" android:defaultValue="false" />
		<EditTextPreferenceFix android:key="timestamp_format" android:title="@string/pref_timestamp_format" android:summary="@string/pref_timestamp_format_summary" android:defaultValue="HH:mm:ss" android:singleLine="true" />
        <CheckBoxPreference android:key="dim_down" android:title="@string/pref_dim_down" android:summary="@string/pref_dim_down_summary" android:defaultValue="false" />
        <CheckBoxPreference android:key="sort_open_buffers" android:title="@string/pref_sort_open_buffers" android:summary="@string/pref_sort_open_buffers_summary" android:defaultValue="false" />
	    <FontPreference android:key="buffer_font" android:title="@string/pref_font" />
	    <ThemePreference android:key="color_scheme" android:title="@string/pref_color_scheme" android:defaultValue="default-theme.properties" />
    </PreferenceScreen>

    <!-- buttons -->

    <PreferenceScreen android:key="button_group" android:title="@string/pref_button_group">
		<CheckBoxPreference android:key="tabbtn_show" android:title="@string/pref_tabbtn_show" android:defaultValue="true" />
		<CheckBoxPreference android:key="sendbtn_show" android:title="@string/pref_sendbtn_show" android:defaultValue="true" />
		<CheckBoxPreference android:key="volumebtn_size" android:title="@string/pref_volumebtn_size" android:summary="@string/pref_volumebtn_size_summary" android:defaultValue="true" />
	</PreferenceScreen>

    <!-- notifications -->

    <PreferenceScreen android:key="notif_group" android:title="@string/pref_notif_group">
		<CheckBoxPreference android:key="notification_enable" android:title="@string/pref_notification_enable" android:summary="@string/pref_notification_enable_summary" android:defaultValue="true" />
        <RingtonePreferenceFix android:key="notification_sound" android:title="@string/pref_notification_sound" android:dependency="notification_enable" android:defaultValue="content://settings/system/notification_sound" />
		<CheckBoxPreference android:key="notification_vibrate" android:title="@string/pref_notification_vibrate" android:defaultValue="false" android:dependency="notification_enable" />
		<CheckBoxPreference android:key="notification_light" android:title="@string/pref_notification_light" android:defaultValue="false" android:dependency="notification_enable"/>
        <CheckBoxPreference android:key="notification_ticker" android:summary="@string/pref_notification_ticker_summary" android:title="@string/pref_notification_ticker" android:defaultValue="true" android:dependency="notification_enable" />
    </PreferenceScreen>

    <!-- about -->

    <PreferenceScreen android:key="about" android:title="@string/about">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="@string/package_name" android:targetClass="com.ubergeek42.WeechatAndroid.WeechatAboutActivity" />
    </PreferenceScreen>
</PreferenceScreen>
