<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/about_inner"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/versionStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WeechatAndroid"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_by" />

        <TextView
            android:id="@+id/versionID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_version_id" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="https://github.com/ubergeek42/weechat-android/"
            android:autoLink="web"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_bug_feature"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</LinearLayout>